--- a/client/src/pages/Home/Home.style.scss
+++ b/client/src/pages/Home/Home.style.scss
@@ -6,5 +6,10 @@
   &__products {
     display: flex;
     flex-direction: column;
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
   }
 }
